Task3_soft_code/vpc.tf
// Creates VPC
resource "aws_vpc" "main" {
  cidr_block       = "${var.vpc_cidr}"

  tags = "${var.tags}"

}
